--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
         <a href="./index.html">About</a>
         <a href="./signup.html">Sign up</a>
       </nav>
-      <img src="./assets/altschool logo.jpg" width="70px" />
+      <img src="altschool logo.jpg" width="70px" />
     </header>
     <main>
       <h1 class="application">Application Form</h1>
